# tud-eks-alex

./: .gitignore  .terraform.lock.hcl  README.md  aws.tf  install-observability-suite.sh  providers.tf  variables.tf
.github/workflows/: cd.yml  ci.yml
apps/intentions/: allow.yaml
apps/v1/: frontend.yaml  nginx.yaml  product-api-db.yaml  product-api.yaml
apps/v2/: referencegrant.yaml
backend/: Dockerfile  app.py  pyproject.toml  requirements.txt
frontend/: package-lock.json
frontend/src/app/: actions.js  add-form.js  delete-form.js  page.js
hashicups/v1/: frontend.yaml  product-api-db.yaml
hashicups/v2/: rbac.yaml
helm/: .terraform.lock.hcl  charts.tf  grafana.yaml  terraform.tf  values.yaml
