[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexandru Constantin Cardas <calexc@alviralex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
